# TDD-Project

./: .travis.yml  README.md  pyproject.toml  qa.json  run_boy.py
.github/workflows/: testing.yml
HU/: HU1.md  HU2.md  HU3.md  HU4.md  HU5.md
bot/: main.py  requirements.txt
frontend/: index.html
frontend/js/: index.js
src/: pyproject.toml
src/database/: errors.py  model.py
src/telegram_bot/: bot.py
src/tests/: test_database.py
src/web_api/: server.py
tassi/database/: model.py
tassi/telegram_bot/: bot.py
tassi/web_api/: server.py
tests/: README.md  test_database.py  test_peewee.py  test_web.py  test_web_api.py  test_with_mock.py
