[tool.poetry]
name = "trackTool"
version = "0.1.0"
description = "A tracking application"
authors = ["Yabir Garcia <yabirg@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
python-dotenv = "^0.14.0"
python-telegram-bot = "^12.8"
peewee = "^3.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
